Fix compilation warnings - reduce from 37 to 0 warnings
Address all major compilation warnings:

1. Deprecation warning:
   - Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
   - Update exception handling in AParent.java

2. Unchecked cast warnings:
   - Fix raw Iterator usage in AStatusReportT.java with proper generics
   - Add @SuppressWarnings for unavoidable B2O deserialization casts
   - Updated files: AControlDesigner, DbDriver, RcConfigure, RcConnect,
     RcApi, RcSpyCB

3. Raw type warnings:
   - Add proper generic types to JList declarations in PConsole.java
   - Update AbstractListModel to use generic types
   - Fix JList constructor calls to use diamond operator

All changes maintain backward compatibility while improving type safety
and eliminating compiler warnings.